# ai-rpg

./: .env-example  .gitignore  Cargo.toml  README.md  game_state.json  setup_state.json
docs/superpowers/specs/: 2026-04-27-backlog-fixes-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/server/: index.ts
frontend/src/: App.css  App.test.ts  App.tsx  SaveSlot.test.ts  global.d.ts  highlightStopwords.ts  imageServices.test.ts  imageServices.ts  inference.ts  main.tsx  narrationService.test.ts  narrationService.ts  types.ts
frontend/src/components/: AmbientRadio.test.ts  AmbientRadio.tsx  CharacterPanel.test.tsx  CharacterPanel.tsx  GameStartSplash.tsx  MultiWindowGuard.test.tsx  MultiWindowGuard.tsx  Narrator.test.tsx  Narrator.tsx  PlayerTabs.test.tsx  PlayerTabs.tsx  QuestPanel.test.tsx  QuestPanel.tsx  ServicePicker.test.tsx  ServicePicker.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SetupWizard.test.ts  SetupWizard.tsx  Snackbar.tsx  SplashScreen.test.tsx  SplashScreen.tsx  Terminal.test.tsx  Terminal.tsx  TitleScreen.test.ts  TitleScreen.test.tsx  TitleScreen.tsx
frontend/src/hooks/: UseCharacterImage.ts  UseGameState.test.ts  UseGameState.ts  useCharacterImage.test.ts
src/: game_logic.rs  lib.rs  main.rs  prompts.rs
tests/: game_logic.rs  prompts_test.rs
